force-app/main/default/objects/custom_create121__c/custom_create121__c.object-meta.xml
<CustomObject>
    <label>Custom created object121</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects121</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>