force-app/main/default/objects/custom_create121__c/fields/custom_create_121field621__c.field-meta.xml
<CustomField>
    <fullName>custom_create_121field621__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 121field621</label>
    <type>Checkbox</type>
</CustomField>